<resources>
    <string name="retrieve_rhymes_failed">The network is slow or unavailable</string>
    <string name="no_rhymes_found_error">Couldn\'t find anything that rhymes with %s</string>
    <string name="search_hint">Retrofit - Test On api.github.com</string>
    <string name="rhyme_caps">Search User</string>
    <string name="retry_caps">RETRY</string>
    <string name="rhymes_with">Rhymes with %s</string>
        <string name="soapURL">http://192.168.0.120:9766/vrsm/generalHTTP/1.1</string>
        <string name="module_package_name">com.silverlake.ifb.module</string>
        <string name="utc">Unable to connect to server</string>
        <string name="internetNA">Internet connection not available </string>
        <string name="loginUserNameHint">Username</string>
        <string name="loginUserPasswordHint">Password</string>
        <string name="loginBtnLogin">Login</string>
        <string name="loginBtnSignUp">Sign Up</string>
        <string name="loginTxtFYP">Forgot your password?</string>
        <string name="promotionLabel">Promotions</string>
    <string name="contactUsDescription">VRSM provides merchants with unsurpassed store-front features and functionalities that deliver personalize mobile shopping experience.
	It is built from customer perspective that is easy to understand, protects customer data and customizable layout tailored to individual need.The velocity at which mobile devices increase its computing power to support complex multimedia rich applications makes VRSM an ideal landscape to bring online shopping experience to the mobile devices.
</string>
        <string name="registerLabel">Fill Up \nand \nLets Shop!</string>
        <string name="registerHintUserID">User ID*</string>
        <string name="registerHintUserPassword">Password*</string>
        <string name="registerHintUserConfirmPassword">Confirm Password*</string>
        <string name="registerHintUserEmail">Email*</string>
        <string name="registerHintUserName">Name*</string>
        <string name="registerHintUserGender">Gender*</string>
        <string name="registerHintUserYear">Year*</string>
        <string name="registerHintUserMonth">Month*</string>
        <string name="registerHintUserDay">Day*</string>
        <string name="registerHintUserPhone">Phone*</string>
        <string name="registerHintUserAddAddress">Add Addres</string>
        <string name="registerHintUserAddressName">Address Name*</string>
        <string name="registerHintUserStreet1">Street 1*</string>
        <string name="registerHintUserStreet2">Street 2</string>
        <string name="registerHintUserStreet3">Street 3</string>
        <string name="registerHintUserCity">City*</string>
        <string name="registerHintUserPostCode">Post Code*</string>
        <string name="registerHintUserCountry">Country*</string>
        <string name="registerHintUserState">State*</string>
        <string name="registerTC">I agree with Terms &amp; Condition</string>
        <string name="registerRP">Return Policy</string>
        <string name="register">Register</string>
        <string name="tc">Terms &amp; Condition</string>
        <string name="errorPleaseFillUpEmptyField">Please fill up the highlighted field</string>
        <string name="errorUserNamePassword">Invalid Username / Password</string>
        <string name="loginErrorEmptyField">Forgot You Passoword</string>
        <string name="action_settings">FIREFLY</string>
        <string name="department_section1">Ladies</string>
        <string name="department_section2">Men</string>
        <string name="department_section3">Books</string>
        <string name="department_section4">Toys &amp; Games</string>
        <string name="department_section5">Electronics </string>
        <string name="department_section6">Kids &amp; Babies </string>
        <string name="department_section7">Sport &amp; Outdoors</string>
        <string name="department_section8">Gadgets</string>
        <string name="more_section1">Newsletter</string>
        <string name="more_section2">Augmented Reality</string>
        <string name="more_section3">Partners</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="action_example">Example action</string>
        <string name="VRSM_webservices_url">http://localhost:9766/vrsm/VrsmWS/</string>
        <string name="TRY">Try again</string>
        <string name="internet_NA_with_retry">Unable to connect to server. Check your internet connection and try again</string>
        <string name="connection_error">Connection error</string>
        <string name="promotion">Promotion</string>
        <string name="pna">Product not available or no longer sold by the merchant</string>
        <string name="newsletter">Newsletter</string>
        <string name="newsletter_mine">My Newsletter</string>
        <string name="augmented_reality">Augmented Reality</string>
        <string name="social_media_wall">Social Media Wall</string>
        <string name="merchant">Merchant</string>
        <string name="badges">Badges</string>
        <string name="contactUS">Contact Us</string>
        <string name="tnc">Term &amp; Condition </string>
        <string name="more_about_vrsm">More about VRSM</string>
        <string name="faq">FAQ</string>
        <string name="return_policy">Return Policy</string>
        <string-array name="gender">
            <item>Male</item>
            <item>Female</item>
        </string-array>
        <string-array name="countrytest">
            <item>Rating</item>
            <item>Price</item>
            <item>Comment</item>
            <item>Newest</item>
            <item>Oldest</item>
        </string-array>
        <string name="month">Month</string>
        <string-array name="full_month">
            <item>January</item>
            <item>February</item>
            <item>March </item>
            <item>April</item>
            <item>May</item>
            <item>Jun</item>
            <item>July</item>
            <item>August</item>
            <item>September</item>
            <item>October</item>
            <item>November</item>
            <item>December</item>
        </string-array>
        <string-array name="requestType">
            <item>Please select</item>
            <item>Return</item>
            <item>Refund</item>
            <item>Other</item>
        </string-array>
        <string-array name="itemCondition">
            <item>Please select</item>
            <item>Opened</item>
            <item>Unopened</item>
        </string-array>
        <string-array name="filter_review">
            <item>SHR,Highest Rate</item>
            <item>SLR,Lowest Rate</item>
            <item>SNF,Newest First</item>
            <item>SOF,Oldest First</item>
        </string-array>
        <string-array name="filter_code">
            <item>SAZ,A to Z</item>
            <item>SZA,Z to A</item>
            <item>SOS,On Sale </item>
            <item>SLP,Lowest Price</item>
            <item>SHP,Highest Price</item>
            <item>SHR,Highest Rating</item>
        </string-array>
        <string-array name="filter">
            <item>A to Z</item>
            <item>Z to A</item>
            <item>On Sale</item>
            <item>Lowest Price</item>
            <item>Highest Price</item>
            <item>Highest Rating</item>
        </string-array>
        <string-array name="search_code">
            <item>STB,Brand,shopbybrand.ShopByBrandListView</item>
            <item>STM,Merchant,merchant.MerchantDetailView</item>
            <item>STD,Department,department.DepartmentView</item>
            <item>STP,Product,productprofile.ProductProfileView</item>
        <item>STD_LVL1,Department,department.
            View</item>
            <item>STD_LVL2,Department,department.DepartmentView</item>
            <item>STD_LVL3,Department,department.DepartmentView</item>
            <item>STD_LVL4,Department,department.DepartmentView</item>
        </string-array>
        <string name="UTC">Unable to connect to server</string>
        <string name="compass_accuracy_low">Please re-calibrate compass by waving your device in a figure 8 motion.</string>
        <string name="location_fetching">Trying to find out where you are</string>
        <string name="location_fetching2">Still trying to find out where you are. Please wait a little bit more.</string>
        <string name="google_map_api_key"><![CDATA[AIzaSyCK7VCGJomx5--fAPlvJZYGRsq4jyVyev0]]></string>
        <string name="imal_google_map_api_key"><![CDATA[AIzaSyBPg4DVdsfxlhmo_OT2_9iNVHSKK3OPBEA]]></string>
        <string name="faizal_google_map_api_key"><![CDATA[AIzaSyCrMUgb-rRMIcSNwt9fEmoomirDaCoDniU]]></string>
        <string name="wishlist_add_all_cart">Add All to Cart</string>
        <string name="wishlist_create_new">Add New Wish List</string>
        <string name="wishlist_add_to">Add to Wish List</string>
        <string name="wishlist_view">View Wish Lists</string>
        <string name="wishlist_continue_shopping">Continue Shopping</string>
        <string name="wishlist_login">Login</string>
        <string name="wishlist_login_message">Please login to add products to your wish list</string>
        <string name="wishlist_no_folder">There is no folder in your wish list</string>
        <string name="wishlist_success_added">This Product has been successfully added to your wish list</string>
        <string name="wishlist_confirm_delete">Are you sure to delete this Wish List?</string>
        <string name="wishlist_confirm_delete_item">Are you sure to delete this item?</string>
        <string name="wishlist_button_delete">Delete</string>
        <string name="button_cancel_lbl">Cancel</string>
        <string name="wishlist_title">My Wish List</string>
        <string name="wishlist_my_stuff">My Stuff</string>
        <string name="wishlist_insert_title">Please insert wishlist title</string>
        <string name="wishlist_select_color">Please select wishlist colors and icons</string>
        <string name="review_no_input">Please fill in the blank</string>
        <string name="review_confirm_delete">Mark as spam?</string>
        <string name="review_button_delete">Yes</string>
        <string name="review_button_cancel">Cancel</string>
        <string name="review_rate">Rate this product:</string>
        <string name="badge_title">Badges</string>
        <string name="badge_mine_title">My Badges</string>
        <string name="badge_congrate">Congratulations!</string>
        <string name="badge_you_earned">You\'ve earned the following badge</string>
        <string name="badge_no_badge">You don\'t have any badge</string>
        <string name="badge_awarded_list">You\'ve been rewarded the following badges</string>
        <string name="badge_member_since">"Member since: "</string>
        <string name="badge_location">"Location: "</string>
        <string name="orderhistory_no_order">No orders have been made</string>
        <string name="orderhistory_number">Order Number :</string>
        <string name="myProfile">My Profile</string>
        <string name="cart">Cart</string>
        <string name="search">Search</string>
        <string name="wishlist_lbl">WishList</string>
        <string name="home_lbl">Home</string>
        <string name="firefly_stroke">/Firefly</string>
        <string name="firefly_airlines_stroke">/Firefly Airlines</string>
        <string name="manage_flight_change_contact">CHANGE CONTACT</string>
        <string name="manage_flight_edit_passenger">EDIT PASSENGER</string>
        <string name="manage_flight_change_flight">CHANGE FLIGHT</string>
        <string name="manage_flight_change_seat">CHANGE SEAT</string>
        <string name="manage_flight_add_payment">ADD PAYMENT</string>
        <string name="manage_flight_send_itinenary">SEND ITINENARY</string>
</resources>