<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:background="@color/dark_lvl1" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:id="@+id/imageView12"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/flyfirefly_logo_plain" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:id="@+id/imageView13"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/flyfirefly_logo_text" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.18"
            android:gravity="center"
            android:background="@drawable/grey_with_white_gradient">

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.58"
            android:background="@color/dark_lvl1">

            <LinearLayout
                android:clickable="true"
                android:background="@drawable/homepage_white_with_gradient"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.16"
                android:gravity="center"
                android:id="@+id/mfChangeContact">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/manage_flight_change_contact"
                    android:id="@+id/textView10"
                    android:textSize="@dimen/font21sp"/>
            </LinearLayout>

            <LinearLayout
                android:clickable="true"
                android:background="@drawable/homepage_white_with_gradient"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.16"
                android:gravity="center"
                android:id="@+id/mfEditPassenger">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/manage_flight_edit_passenger"
                    android:id="@+id/textView11"
                    android:textSize="@dimen/font21sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mfChangeFlight"
                android:clickable="true"
                android:background="@drawable/homepage_white_with_gradient"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.16"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/manage_flight_change_flight"
                    android:id="@+id/textView12"
                    android:textSize="@dimen/font21sp"/>
            </LinearLayout>

            <LinearLayout
                android:clickable="true"
                android:background="@drawable/homepage_white_with_gradient"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.16"
                android:gravity="center"
                android:id="@+id/mfChangeSeat">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/manage_flight_change_seat"
                    android:textSize="@dimen/font21sp"
                    android:id="@+id/textView13"/>
            </LinearLayout>

            <LinearLayout
                android:clickable="true"
                android:background="@drawable/homepage_white_with_gradient"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.16"
                android:gravity="center"
                android:id="@+id/linearLayout" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/manage_flight_add_payment"
                    android:textSize="@dimen/font21sp"
                    android:id="@+id/textView109"/>
            </LinearLayout>

            <LinearLayout
                android:clickable="true"
                android:background="@drawable/homepage_white_with_gradient"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.16"
                android:gravity="center"
                android:id="@+id/mfSendItinenary" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/manage_flight_send_itinenary"
                    android:textSize="@dimen/font21sp"
                    android:id="@+id/textView110"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:background="@color/actionBarColour_default_theme"
            android:weightSum="1"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:gravity="center">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView6"
                        android:src="@drawable/facebook"
                        android:padding="12dp"
                        android:adjustViewBounds="true"/>
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/firefly_stroke"
                    android:id="@+id/textView6"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView9"
                        android:src="@drawable/twitter"
                        android:padding="12dp"
                        android:adjustViewBounds="true"/>
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/firefly_stroke"
                    android:id="@+id/textView7"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView7"
                        android:src="@drawable/insta"
                        android:padding="12dp"
                        android:adjustViewBounds="true"/>
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/firefly_airlines_stroke"
                    android:id="@+id/textView8"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>